# csv-splitter

./: .gitignore  README.md  main.py  pyproject.toml
