[project]
name = "csv-splitter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "crazyoptimist", email = "me@crazyoptimist.net"},
]
dependencies = ["pandas>=3.0.1", "openpyxl>=3.1.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
